--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header-line">
       <div class="container">
-        <div class="header-line">
           <nav class="navigation">
             <a href="./index.html" class="logo-header"
               >Web<span class="logo-header-span">Studio</span></a
@@ -57,25 +56,23 @@
             </ul>
           </address>
         </div>
-      </div>
+      </class=>
     </header>
 
     <main>
       <!-- headline -->
-      <section class="section-headline" class="section">
+      <section class="section-headline">
         <div class="container">
-          <div class="container-header">
             <h1 class="section-headline-main">
               Effective Solutions for Your Business
             </h1>
             <button type="button" class="button">Order Service</button>
           </div>
-        </div>
       </section>
       <!-- advantages -->
-      <section class="benefits" class="section">
+      <section class="benefits">
         <div class="container">
-          <h2 hidden>headline</h2>
+          <h2 visually-hidden>headline</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-title-item">Strategy</h3>
@@ -109,7 +106,7 @@
         </div>
       </section>
       <!-- Team -->
-      <section class="team" class="section">
+      <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -121,10 +118,13 @@
                 width="264"
                 height="260"
               />
+
+              <div class="employer-profession">
               <h3 class="team-list-title">Mark Guerrero</h3>
               <p class="team-list-text">Product Designer</p>
             </li>
             <li class="team-list-item">
+            </div>
               <img
                 class="team-list-image"
                 src="./images/imgtom.jpg"
@@ -132,8 +132,12 @@
                 width="264"
                 height="260"
               />
+              
+              <div class="employer-profession">
               <h3 class="team-list-title">Tom Ford</h3>
               <p class="team-list-text">Frontend Developer</p>
+            </div>
+
             </li>
             <li class="team-list-item">
               <img
@@ -143,8 +147,10 @@
                 width="264"
                 height="260"
               />
+              <div class="employer-profession">
               <h3 class="team-list-title">Camila Garcia</h3>
               <p class="team-list-text">Marketing</p>
+            </div>
             </li>
             <li class="team-list-item">
               <img
@@ -154,14 +160,16 @@
                 width="264"
                 height="260"
               />
+              <div class="employer-profession">
               <h3 class="team-list-title">Daniel Wilson</h3>
               <p class="team-list-text">UI Designer</p>
+            </div>
             </li>
           </ul>
         </div>
       </section>
       <!-- Our Portfolio -->
-      <section class="portfolio" class="section">
+      <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -173,8 +181,10 @@
                 width="360"
                 height="300"
               />
+<div class="plist-noimage">
               <h3 class="portfolio-list-title">Banking App</h3>
               <p class="portfolio-list-text">App</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -184,8 +194,10 @@
                 width="360"
                 height="300"
               />
+<div class="plist-noimage">
               <h3 class="portfolio-list-title">Cashless Payment</h3>
               <p class="portfolio-list-text">Marketing</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -195,8 +207,10 @@
                 width="360"
                 height="300"
               />
+<div class="plist-noimage">
               <h3 class="portfolio-list-title">Meditation App</h3>
               <p class="portfolio-list-text">App</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -206,8 +220,10 @@
                 width="360"
                 height="300"
               />
+              <div class="plist-noimage">
               <h3 class="portfolio-list-title">Taxi Service</h3>
               <p class="portfolio-list-text">Marketing</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -217,8 +233,10 @@
                 width="360"
                 height="300"
               />
+              <div class="plist-noimage">
               <h3 class="portfolio-list-title">Screen Illustrations</h3>
               <p class="portfolio-list-text">Design</p>
+            </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -228,27 +246,27 @@
                 width="360"
                 height="300"
               />
+
+              <div class="plist-noimage">
               <h3 class="portfolio-list-title">Online Courses</h3>
               <p class="portfolio-list-text">Marketing</p>
+            </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!-- footer -->
-    <footer class="footer" class="section">
+    <footer class="footer">
       <div class="container">
-        <div class="logo-footer-container">
           <a href="./index.html" class="logo-footer"
             >Web<span class="logo-footer-span">Studio</span></a
           >
-        </div>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
       </div>
     </footer>
-    </body>
   </body>
 </html>
