--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
             </ul>
           </address>
         </div>
-      </class=>
     </header>
 
     <main>
@@ -72,7 +71,7 @@
       <!-- advantages -->
       <section class="benefits">
         <div class="container">
-          <h2 visually-hidden>headline</h2>
+          <h2 class="visually-hidden">headline</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
               <h3 class="benefits-title-item">Strategy</h3>
@@ -122,9 +121,9 @@
               <div class="employer-profession">
               <h3 class="team-list-title">Mark Guerrero</h3>
               <p class="team-list-text">Product Designer</p>
+            </div>
             </li>
             <li class="team-list-item">
-            </div>
               <img
                 class="team-list-image"
                 src="./images/imgtom.jpg"
