--- a/index.html
+++ b/index.html
@@ -23,50 +23,52 @@
   <body>
     <header class="header-line">
       <div class="container">
-          <nav class="navigation">
-            <a href="./index.html" class="logo-header"
-              >Web<span class="logo-header-span">Studio</span></a
-            >
-            <ul class="navigation-list">
-              <li>
-                <a href="./index.html" class="navigation-item"
-                  ><span>Studio</span></a
-                >
-              </li>
-              <li>
-                <a href="" class="navigation-item">Portfolio</a>
-              </li>
-              <li>
-                <a href="" class="navigation-item">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <address class="address-details">
-            <ul class="address-list">
-              <li>
-                <a href="mailto:info@devstudio.com" class="details-item"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a href="tel:+110001111111" class="details-item"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+        <nav class="navigation">
+          <a href="./index.html" class="logo-header"
+            >Web<span class="logo-header-span">Studio</span></a
+          >
+          <ul class="navigation-list">
+            <li>
+              <a href="./index.html" class="navigation-item"
+                ><span>Studio</span></a
+              >
+            </li>
+            <li>
+              <a href="" class="navigation-item">Portfolio</a>
+            </li>
+            <li>
+              <a href="" class="navigation-item">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="address-details">
+          <ul class="address-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="details-item"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="details-item"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- headline -->
       <section class="section-headline">
         <div class="container">
-            <h1 class="section-headline-main">
-              Effective Solutions for Your Business
-            </h1>
-            <button type="button" class="button">Order Service</button>
-          </div>
+          <div class="headline-wrap">
+          <h1 class="section-headline-main">
+            Effective Solutions for Your Business
+          </h1>
+          <button type="button" class="button">Order Service</button>
+        </div>
+        </div>
       </section>
       <!-- advantages -->
       <section class="benefits">
@@ -119,9 +121,9 @@
               />
 
               <div class="employer-profession">
-              <h3 class="team-list-title">Mark Guerrero</h3>
-              <p class="team-list-text">Product Designer</p>
-            </div>
+                <h3 class="team-list-title">Mark Guerrero</h3>
+                <p class="team-list-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -131,12 +133,11 @@
                 width="264"
                 height="260"
               />
-              
-              <div class="employer-profession">
-              <h3 class="team-list-title">Tom Ford</h3>
-              <p class="team-list-text">Frontend Developer</p>
-            </div>
 
+              <div class="employer-profession">
+                <h3 class="team-list-title">Tom Ford</h3>
+                <p class="team-list-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -147,9 +148,9 @@
                 height="260"
               />
               <div class="employer-profession">
-              <h3 class="team-list-title">Camila Garcia</h3>
-              <p class="team-list-text">Marketing</p>
-            </div>
+                <h3 class="team-list-title">Camila Garcia</h3>
+                <p class="team-list-text">Marketing</p>
+              </div>
             </li>
             <li class="team-list-item">
               <img
@@ -160,9 +161,9 @@
                 height="260"
               />
               <div class="employer-profession">
-              <h3 class="team-list-title">Daniel Wilson</h3>
-              <p class="team-list-text">UI Designer</p>
-            </div>
+                <h3 class="team-list-title">Daniel Wilson</h3>
+                <p class="team-list-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -180,10 +181,10 @@
                 width="360"
                 height="300"
               />
-<div class="plist-noimage">
-              <h3 class="portfolio-list-title">Banking App</h3>
-              <p class="portfolio-list-text">App</p>
-            </div>
+              <div class="plist-noimage">
+                <h3 class="portfolio-list-title">Banking App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -193,10 +194,10 @@
                 width="360"
                 height="300"
               />
-<div class="plist-noimage">
-              <h3 class="portfolio-list-title">Cashless Payment</h3>
-              <p class="portfolio-list-text">Marketing</p>
-            </div>
+              <div class="plist-noimage">
+                <h3 class="portfolio-list-title">Cashless Payment</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -206,10 +207,10 @@
                 width="360"
                 height="300"
               />
-<div class="plist-noimage">
-              <h3 class="portfolio-list-title">Meditation App</h3>
-              <p class="portfolio-list-text">App</p>
-            </div>
+              <div class="plist-noimage">
+                <h3 class="portfolio-list-title">Meditation App</h3>
+                <p class="portfolio-list-text">App</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -220,9 +221,9 @@
                 height="300"
               />
               <div class="plist-noimage">
-              <h3 class="portfolio-list-title">Taxi Service</h3>
-              <p class="portfolio-list-text">Marketing</p>
-            </div>
+                <h3 class="portfolio-list-title">Taxi Service</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -233,9 +234,9 @@
                 height="300"
               />
               <div class="plist-noimage">
-              <h3 class="portfolio-list-title">Screen Illustrations</h3>
-              <p class="portfolio-list-text">Design</p>
-            </div>
+                <h3 class="portfolio-list-title">Screen Illustrations</h3>
+                <p class="portfolio-list-text">Design</p>
+              </div>
             </li>
             <li class="portfolio-list-item">
               <img
@@ -247,9 +248,9 @@
               />
 
               <div class="plist-noimage">
-              <h3 class="portfolio-list-title">Online Courses</h3>
-              <p class="portfolio-list-text">Marketing</p>
-            </div>
+                <h3 class="portfolio-list-title">Online Courses</h3>
+                <p class="portfolio-list-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -258,9 +259,9 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-          <a href="./index.html" class="logo-footer"
-            >Web<span class="logo-footer-span">Studio</span></a
-          >
+        <a href="./index.html" class="logo-footer"
+          >Web<span class="logo-footer-span">Studio</span></a
+        >
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
