--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     />
   </head>
   <body>
-    <header class="header-line">
-      <div class="container">
+    <!-- <header class="header-line"> -->
+      <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo-header"
             >Web<span class="logo-header-span">Studio</span></a
@@ -30,7 +30,7 @@
           <ul class="navigation-list">
             <li>
               <a href="./index.html" class="navigation-item"
-                ><span>Studio</span></a
+                >Studio</a
               >
             </li>
             <li>
@@ -62,12 +62,12 @@
       <!-- headline -->
       <section class="section-headline">
         <div class="container">
-          <div class="headline-wrap">
+          <!-- <div class="headline-wrap"> -->
           <h1 class="section-headline-main">
             Effective Solutions for Your Business
           </h1>
           <button type="button" class="button">Order Service</button>
-        </div>
+        <!-- </div> -->
         </div>
       </section>
       <!-- advantages -->
