--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
   </head>
   <body>
-    <!-- <header class="header-line"> -->
+    <header>
       <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="logo-header"
